[tool.poetry]
name = "Mipha"
version = "2.0.0"
description = "A fun and lightweight Discord bot for personal use."
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", extras = [
    "voice",
    "speedup",
], rev = "feature/user_apps" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus", rev = "master" }
async-rediscache = { version = "1.0.0rc2", extras = ["fakeredis"] }
great-asset = { git = "https://github.com/AbstractUmbra/GreatAsset.git", rev = "main" }
rcon = { git = "https://github.com/conqp/rcon.git", rev = "master" }
asqlite = { git = "https://github.com/Rapptz/asqlite.git", rev = "master" }
jishaku = "*"
hondana = "*"
asyncpg = "*"
psutil = "*"
lru_dict = "*"
pykakasi = "*"
beautifulsoup4 = "4.12.3"
Pillow = "*"
pygit2 = "*"
yt-dlp = "*"
typing-extensions = "*"
parsedatetime = "*"
python-dateutil = "*"
python-a2s = "*"
lxml = "5.1.0"
legofy = "*"
mcrcon = "*"
numpy = "*"
tabulate = "*"
"imagetext-py" = "*"
orjson = "*"
uvloop = "*"
markdownify = "0.11.6"

[tool.poetry.group.dev.dependencies]
ruff = "*"
asyncpg-stubs = "*"
pre-commit = "*"

[tool.ruff]
target-version = "py312"
line-length = 125

[tool.ruff.lint]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "PLR2004",
    "RUF001",
    "RUF009",
    "SIM105",
    "S101",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
pythonVersion = "3.12"
ignore = [
    "extensions/_old_lewd.py",
] # let's keep files but ignore their diagnostics
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
reportMissingImports = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUnusedExpression = "error"
reportGeneralTypeIssues = "error"
reportDuplicateImport = "error"
reportUntypedFunctionDecorator = "error"
reportUnnecessaryTypeIgnoreComment = "warning"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
