[project]
name = "Mipha"
version = "2.0.0"
description = "A fun and lightweight Discord bot for personal use."
authors = [{ name = "Alex Nørgaard", email = "umbra@abstractumbra.dev" }]
dependencies = [
    "asqlite @ git+https://github.com/Rapptz/asqlite.git@master",
    "asyncpg",
    "beautifulsoup4",
    "discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus@master",
    "discord-py[speed,voice] @ git+https://github.com/Rapptz/discord.py.git@master",
    "hondana[speed]",
    "imagetext-py",
    "jishaku",
    "legofy",
    "lru-dict",
    "lxml==5.3.0",
    "matplotlib>=3.10.5",
    "mystbin-py",
    "numpy>=2.3.2",
    "orjson",
    "parsedatetime",
    "pillow",
    "psutil",
    "pygit2",
    "pykakasi @ git+https://codeberg.org/miurahr/pykakasi.git@master",
    "python-a2s @ git+https://github.com/Yepoleb/python-a2s.git@typing",
    "python-dateutil",
    "tabulate",
    "typing-extensions",
    "uvloop",
    "yt-dlp",
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = { file = "LICENSE" }

[dependency-groups]
dev = ["ruff", "asyncpg-stubs", "pre-commit"]
minecraft = [
    "mcstatus>=11.1.1",
    "rcon @ git+https://github.com/conqp/rcon.git@master",
]

[tool.ruff]
line-length = 125
target-version = "py312"
exclude = ["extensions/heights"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",
    "ASYNC109", # dpy commonly uses this parameter
    "ASYNC240", # i dont like trio/anyio
    "C901",
    "COM812",
    "CPY001",
    "D",        # not needed here
    "DOC",
    "EM101",    # in this case this is okay
    "F401",
    "F402",
    "F403",
    "F405",
    "INP001",   # due to how I load modules this results in annoyances
    "PD011",    # this is not a numpy codebase
    "PERF203",
    "PLC0414",  # pyright ruling for `as` imports needed
    "PLR0912",
    "PLR0913",
    "PLR2004",  # I hate this rule
    "PLR6301",
    "Q000",
    "RUF001",
    "RUF009",
    "S101",     # assert is used for type checking in this codebase
    "SLF001",
    "SIM105",
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    "UP034",
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.
"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
pythonVersion = "3.12"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
reportMissingImports = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUnusedExpression = "error"
reportGeneralTypeIssues = "error"
reportDuplicateImport = "error"
reportUntypedFunctionDecorator = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
